/***********************************************************************
X3 ChangeLog

2008-08-19  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: fix a bug in the default wheel spin settings if they
	were not in the config file, x3 would core.

2008-07-21  Neil SPierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Turn the kick ban all chans spin action into a
	timed ban (5 minutes). Also seperated the setting of the ban from
	the stripping of ohv. If Nefarious has halfops disabled then trying
	to strip the modes and set the ban results in the numeric being set
	as the ban. This will need to be fixed in nefarious.

2008-07-20  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: remove spin debugging code. Fix gline/kill glitch.

	* src/config.h: bump trunk to 1.7

2008-07-19  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: dont print warning on uping to a jupe. added
	irc_svsquit() function

	* src/chanserv.c: rework wheel-of-misfortune a bit, allow individual
	spins to be enabled in x3.conf and make it easy to add new ones or
	change likelyhoods.

	* src/proto.h: added irc_svsquit() prototype

	* src/x3.conf.example: wheel action example configs

2008-07-18  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: set lastmod time to current time when sending
	glines, otherwise ircd wont burst them later.

	* src/modcmd.c: break credits out to its own command, and add svn
	version string to ctcp version reply.

2008-07-02  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/proto-p10.c: Added missing PRIV_*'s to privtab

	* src/hash.h: #define's for missing PRIV_*'s

2008-06-23  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: Fix a bug where if spin abuse creates a clone, but an oper kills the
	clone before its auto-removed, x3 crashes. Thanks tyler and jigsy.

2008-06-23  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: make opserv access level required to be in oper ldap
	group configurable.
